# prodly_v3

./: .gitignore  BUILD_INSTRUCTIONS.md  DIAGNOSTIC_REPORT.md  IDE_SETUP.md  KALI_QUICK_START.md  MIGRATION_SEQUENCE_ALGORITHM.md  PROJECT_FIXES.md  PROJECT_REPORT.md  QUICK_START.md  README.md  RUNNING_ISSUES_SOLVED.md  RUN_IN_VSCODE.md  SAMPLE_DATA_INTEGRATION.md  SECURITY_TESTING_KALI.md  USER_GUIDE.md  VSCODE_QUICK_START.md  VSCODE_RUN_INSTRUCTIONS.md  VSCODE_SETUP.md  auto_push.bat  security_test_script.sh
cpp_core/: CMakeLists.txt
cpp_core/JNI/: ProdlyJNI.cpp  ProdlyJNI.h
cpp_core/include/: AVLTree.h  ExitReadinessDashboard.h  Graph.h  MigrationDifficultyAnalyzer.h  VendorLockInAnalyzer.h
cpp_core/src/: AVLTree.cpp  ExitReadinessDashboard.cpp  ExitReadinessGraph.cpp  ExitReadinessGraph.h  Graph.cpp  MigrationDifficultyAnalyzer.cpp  MigrationGraph.cpp  MigrationGraph.h  VendorAVLTree.cpp  VendorAVLTree.h  VendorGraph.cpp  VendorGraph.h  VendorHashTable.cpp  VendorHashTable.h  VendorLockInAnalyzer.cpp
java_gui/: nbactions.xml  pom.xml
java_gui/src/main/java/com/prodly/: ExitReadinessDashboardJNI.java  ExitReadinessScreen.java  MigrationDifficultyAnalyzerJNI.java  MigrationDifficultyScreen.java  ProdlyApplication.java  VendorLockInAnalyzerJNI.java  VendorLockInScreen.java
